--- a/public/scss/modules/_design_tests.scss
+++ b/public/scss/modules/_design_tests.scss
@@ -1,13 +1,13 @@
 /*design_tests.scss*/
 
-/**** DESIGN TESTS
+/**** DESIGN TEST BUTTONS
 *=======================================================================*/
 .design_test {
   background-color: #B202B2;
-  border: 0.125rem solid #000033;
-  border-radius: 0.625rem;
-  margin: 1.47rem 0 2rem;
-  max-width: 40.4rem;
+  border: 2px solid #000033;
+  border-radius: 10px;
+  margin: 23.52px 0 32px;
+  max-width: 710px;
   a {
     color: #E80000;
     font-weight: 600;
@@ -18,13 +18,13 @@
 .test_button {
   display: inline-block;
   background-color: #CBCACA;
-  border: 0.0625rem solid #000066;
-  border-radius: 0.625rem;
-  padding: 1rem 1.125rem;
-  margin: 1rem;
+  border: 1px solid #000066;
+  border-radius: 10px;
+  padding: 16px 18px;
+  margin: 16px;
 }
 
-/*===== State =====*/
+/*===== Hover state =====*/
 .design_test a:hover {
   background-color: #4F4F4F;
   color: #31157A;
